fixed shelter plots

--- a/in_progress/home_default/analysis.ipynb
+++ b/in_progress/home_default/analysis.ipynb
@@ -24,49 +24,81 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "%matplotlib inline\n",
-    "sns.set()"
+    "sns.set()\n",
+    "\n",
+    "DATA_PATH = \"../../data/home_default/\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load data"
+    "### Styling helpers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shape of train: (307511, 122)\n",
-      "Shape of test: (48744, 121)\n"
-     ]
-    }
-   ],
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "train = pd.read_csv(\"../../data/home_default/train.csv\")\n",
-    "test  = pd.read_csv(\"../../data/home_default/test.csv\")\n",
+    "# A short hand way to plot most bar graphs\n",
+    "def pretty_bar(data, ax, xlabel=None, ylabel=None, title=None, int_text=False):\n",
+    "    \n",
+    "    # Plots the data\n",
+    "    fig = sns.barplot(data.values, data.index, ax=ax)\n",
+    "    \n",
+    "    # Places text for each value in data\n",
+    "    for i, v in enumerate(data.values):\n",
+    "        \n",
+    "        # Decides whether the text should be rounded or left as floats\n",
+    "        if int_text:\n",
+    "            ax.text(0, i, int(v), color='k', fontsize=14)\n",
+    "        else:\n",
+    "            ax.text(0, i, round(v, 3), color='k', fontsize=14)\n",
+    "     \n",
+    "    ### Labels plot\n",
+    "    ylabel != None and fig.set(ylabel=ylabel)\n",
+    "    xlabel != None and fig.set(xlabel=xlabel)\n",
+    "    title != None and fig.set(title=title)\n",
     "\n",
-    "print(\"Shape of train:\", train.shape)\n",
-    "print(\"Shape of test:\",  test.shape)"
+    "    \n",
+    "### Used to style Python print statements\n",
+    "class color:\n",
+    "    BOLD = '\\033[1m'\n",
+    "    UNDERLINE = '\\033[4m'\n",
+    "    END = '\\033[0m'"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Column details"
+    "# Table of Contents\n",
+    "\n",
+    "1.) [Train and Test](#train_test)\n",
+    "\n",
+    "2.) [Bureau](#bureau)\n",
+    "\n",
+    "3.) [Bureau Balance](#bureau_balance)\n",
+    "\n",
+    "4.) [POS CASH](#pos_cash)\n",
+    "\n",
+    "5.) [Credit Card Balance](#credit_card)\n",
+    "\n",
+    "6.) [Previous Application](#prev_app)\n",
+    "\n",
+    "7.) [Installments Payments](#install_payments)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a name=\"train_test\"></a>\n",
+    "\n",
     "### {train|test}.csv\n",
     "\n",
     "(Open to see description of columns)\n",
@@ -188,9 +220,114 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "train = pd.read_csv(DATA_PATH + \"train.csv\")\n",
+    "test  = pd.read_csv(DATA_PATH + \"test.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of train: (307511, 122)\n",
+      "Shape of test: (48744, 121)\n",
+      "\n",
+      "\u001b[4mColumns of train:\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array(['SK_ID_CURR', 'TARGET', 'NAME_CONTRACT_TYPE', 'CODE_GENDER',\n",
+       "       'FLAG_OWN_CAR', 'FLAG_OWN_REALTY', 'CNT_CHILDREN',\n",
+       "       'AMT_INCOME_TOTAL', 'AMT_CREDIT', 'AMT_ANNUITY', 'AMT_GOODS_PRICE',\n",
+       "       'NAME_TYPE_SUITE', 'NAME_INCOME_TYPE', 'NAME_EDUCATION_TYPE',\n",
+       "       'NAME_FAMILY_STATUS', 'NAME_HOUSING_TYPE',\n",
+       "       'REGION_POPULATION_RELATIVE', 'DAYS_BIRTH', 'DAYS_EMPLOYED',\n",
+       "       'DAYS_REGISTRATION', 'DAYS_ID_PUBLISH', 'OWN_CAR_AGE', 'FLAG_MOBIL',\n",
+       "       'FLAG_EMP_PHONE', 'FLAG_WORK_PHONE', 'FLAG_CONT_MOBILE',\n",
+       "       'FLAG_PHONE', 'FLAG_EMAIL', 'OCCUPATION_TYPE', 'CNT_FAM_MEMBERS',\n",
+       "       'REGION_RATING_CLIENT', 'REGION_RATING_CLIENT_W_CITY',\n",
+       "       'WEEKDAY_APPR_PROCESS_START', 'HOUR_APPR_PROCESS_START',\n",
+       "       'REG_REGION_NOT_LIVE_REGION', 'REG_REGION_NOT_WORK_REGION',\n",
+       "       'LIVE_REGION_NOT_WORK_REGION', 'REG_CITY_NOT_LIVE_CITY',\n",
+       "       'REG_CITY_NOT_WORK_CITY', 'LIVE_CITY_NOT_WORK_CITY',\n",
+       "       'ORGANIZATION_TYPE', 'EXT_SOURCE_1', 'EXT_SOURCE_2', 'EXT_SOURCE_3',\n",
+       "       'APARTMENTS_AVG', 'BASEMENTAREA_AVG', 'YEARS_BEGINEXPLUATATION_AVG',\n",
+       "       'YEARS_BUILD_AVG', 'COMMONAREA_AVG', 'ELEVATORS_AVG',\n",
+       "       'ENTRANCES_AVG', 'FLOORSMAX_AVG', 'FLOORSMIN_AVG', 'LANDAREA_AVG',\n",
+       "       'LIVINGAPARTMENTS_AVG', 'LIVINGAREA_AVG', 'NONLIVINGAPARTMENTS_AVG',\n",
+       "       'NONLIVINGAREA_AVG', 'APARTMENTS_MODE', 'BASEMENTAREA_MODE',\n",
+       "       'YEARS_BEGINEXPLUATATION_MODE', 'YEARS_BUILD_MODE',\n",
+       "       'COMMONAREA_MODE', 'ELEVATORS_MODE', 'ENTRANCES_MODE',\n",
+       "       'FLOORSMAX_MODE', 'FLOORSMIN_MODE', 'LANDAREA_MODE',\n",
+       "       'LIVINGAPARTMENTS_MODE', 'LIVINGAREA_MODE',\n",
+       "       'NONLIVINGAPARTMENTS_MODE', 'NONLIVINGAREA_MODE', 'APARTMENTS_MEDI',\n",
+       "       'BASEMENTAREA_MEDI', 'YEARS_BEGINEXPLUATATION_MEDI',\n",
+       "       'YEARS_BUILD_MEDI', 'COMMONAREA_MEDI', 'ELEVATORS_MEDI',\n",
+       "       'ENTRANCES_MEDI', 'FLOORSMAX_MEDI', 'FLOORSMIN_MEDI',\n",
+       "       'LANDAREA_MEDI', 'LIVINGAPARTMENTS_MEDI', 'LIVINGAREA_MEDI',\n",
+       "       'NONLIVINGAPARTMENTS_MEDI', 'NONLIVINGAREA_MEDI',\n",
+       "       'FONDKAPREMONT_MODE', 'HOUSETYPE_MODE', 'TOTALAREA_MODE',\n",
+       "       'WALLSMATERIAL_MODE', 'EMERGENCYSTATE_MODE',\n",
+       "       'OBS_30_CNT_SOCIAL_CIRCLE', 'DEF_30_CNT_SOCIAL_CIRCLE',\n",
+       "       'OBS_60_CNT_SOCIAL_CIRCLE', 'DEF_60_CNT_SOCIAL_CIRCLE',\n",
+       "       'DAYS_LAST_PHONE_CHANGE', 'FLAG_DOCUMENT_2', 'FLAG_DOCUMENT_3',\n",
+       "       'FLAG_DOCUMENT_4', 'FLAG_DOCUMENT_5', 'FLAG_DOCUMENT_6',\n",
+       "       'FLAG_DOCUMENT_7', 'FLAG_DOCUMENT_8', 'FLAG_DOCUMENT_9',\n",
+       "       'FLAG_DOCUMENT_10', 'FLAG_DOCUMENT_11', 'FLAG_DOCUMENT_12',\n",
+       "       'FLAG_DOCUMENT_13', 'FLAG_DOCUMENT_14', 'FLAG_DOCUMENT_15',\n",
+       "       'FLAG_DOCUMENT_16', 'FLAG_DOCUMENT_17', 'FLAG_DOCUMENT_18',\n",
+       "       'FLAG_DOCUMENT_19', 'FLAG_DOCUMENT_20', 'FLAG_DOCUMENT_21',\n",
+       "       'AMT_REQ_CREDIT_BUREAU_HOUR', 'AMT_REQ_CREDIT_BUREAU_DAY',\n",
+       "       'AMT_REQ_CREDIT_BUREAU_WEEK', 'AMT_REQ_CREDIT_BUREAU_MON',\n",
+       "       'AMT_REQ_CREDIT_BUREAU_QRT', 'AMT_REQ_CREDIT_BUREAU_YEAR'], dtype=object)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"Shape of train:\", train.shape)\n",
+    "print(\"Shape of test:\",  test.shape)\n",
+    "\n",
+    "print(\"\\n{}Columns of train:{}\".format(color.UNDERLINE, color.END))\n",
+    "train.columns.values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a name=\"bureau\"></a>\n",
+    "\n",
     "### bureau.csv\n",
     "\n",
     "(Open to see description of columns)\n",
@@ -216,17 +353,210 @@
     "139,CREDIT_TYPE,\"Type of Credit Bureau credit (Car, cash,...)\",\n",
     "140,DAYS_CREDIT_UPDATE,How many days before loan application did last information about the Credit Bureau credit come,time only relative to the application\n",
     "141,AMT_ANNUITY,Annuity of the Credit Bureau credit,\n",
-    "142,bureau_balance.csv,SK_BUREAU_ID,Recoded ID of Credit Bureau credit (unique coding for each application) - use this to join to CREDIT_BUREAU table ,hashed\n",
-    "143,bureau_balance.csv,MONTHS_BALANCE,Month of balance relative to application date (-1 means the freshest balance date),time only relative to the application\n",
-    "144,bureau_balance.csv,STATUS,\"Status of Credit Bureau loan during the month (active, closed, DPD0-30,Ö [C means closed, X means status unknown, 0 means no DPD, 1 means maximal did during month between 1-30, 2 means DPD 31-60,Ö 5 means DPD 120+ or sold or written off ] )\",\n",
     "\n",
     "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of bureau: (1716428, 17)\n",
+      "\n",
+      "\u001b[4mColumns of bureau:\u001b[0m\n",
+      "SK_ID_CURR --- SK_ID_BUREAU --- CREDIT_ACTIVE --- CREDIT_CURRENCY --- DAYS_CREDIT --- CREDIT_DAY_OVERDUE --- DAYS_CREDIT_ENDDATE --- DAYS_ENDDATE_FACT --- AMT_CREDIT_MAX_OVERDUE --- CNT_CREDIT_PROLONG --- AMT_CREDIT_SUM --- AMT_CREDIT_SUM_DEBT --- AMT_CREDIT_SUM_LIMIT --- AMT_CREDIT_SUM_OVERDUE --- CREDIT_TYPE --- DAYS_CREDIT_UPDATE --- AMT_ANNUITY\n"
+     ]
+    }
+   ],
+   "source": [
+    "bureau = pd.read_csv(DATA_PATH + \"bureau.csv\")\n",
+    "print(\"Shape of bureau:\",  bureau.shape)\n",
+    "\n",
+    "print(\"\\n{}Columns of bureau:{}\".format(color.UNDERLINE, color.END))\n",
+    "print(\" --- \".join(bureau.columns.values))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a name=\"bureau_balance\"></a>\n",
+    "\n",
+    "### bureau_balance.csv\n",
+    "\n",
+    "(Open to see description of columns)\n",
+    "\n",
+    "<div hidden>\n",
+    "\n",
+    ",Row,Description,Special\n",
+    "\n",
+    "142,SK_BUREAU_ID,Recoded ID of Credit Bureau credit (unique coding for each application) - use this to join to CREDIT_BUREAU table ,hashed\n",
+    "143,MONTHS_BALANCE,Month of balance relative to application date (-1 means the freshest balance date),time only relative to the application\n",
+    "144,STATUS,\"Status of Credit Bureau loan during the month (active, closed, DPD0-30,Ö [C means closed, X means status unknown, 0 means no DPD, 1 means maximal did during month between 1-30, 2 means DPD 31-60,Ö 5 means DPD 120+ or sold or written off ] )\",\n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of bureau_balance: (27299925, 3)\n",
+      "\n",
+      "\u001b[4mColumns of bureau_balance:\u001b[0m\n",
+      "SK_ID_BUREAU --- MONTHS_BALANCE --- STATUS\n"
+     ]
+    }
+   ],
+   "source": [
+    "bureau_balance = pd.read_csv(DATA_PATH + \"bureau_balance.csv\")\n",
+    "print(\"Shape of bureau_balance:\",  bureau_balance.shape)\n",
+    "\n",
+    "print(\"\\n{}Columns of bureau_balance:{}\".format(color.UNDERLINE, color.END))\n",
+    "print(\" --- \".join(bureau_balance.columns.values))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Let's look at Status, maybe there's a bad status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "C    13646993\n",
+       "0     7499507\n",
+       "X     5810482\n",
+       "1      242347\n",
+       "5       62406\n",
+       "2       23419\n",
+       "3        8924\n",
+       "4        5847\n",
+       "Name: STATUS, dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bureau_balance.groupby(\"\")[\"STATUS\"].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Notes:\n",
+    "\n",
+    "Okay so we see that the variable SK_ID_BUREAU should be connected to the bureau.csv table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0            0\n",
+       "1           -1\n",
+       "2           -2\n",
+       "3           -3\n",
+       "4           -4\n",
+       "5           -5\n",
+       "6           -6\n",
+       "7           -7\n",
+       "8           -8\n",
+       "9           -9\n",
+       "10         -10\n",
+       "11         -11\n",
+       "12         -12\n",
+       "13         -13\n",
+       "14         -14\n",
+       "15         -15\n",
+       "16         -16\n",
+       "17         -17\n",
+       "18         -18\n",
+       "19         -19\n",
+       "20         -20\n",
+       "21         -21\n",
+       "22         -22\n",
+       "23         -23\n",
+       "24         -24\n",
+       "25         -25\n",
+       "26         -26\n",
+       "27           0\n",
+       "28          -1\n",
+       "29          -2\n",
+       "            ..\n",
+       "27299895   -18\n",
+       "27299896   -19\n",
+       "27299897   -20\n",
+       "27299898   -21\n",
+       "27299899   -22\n",
+       "27299900   -23\n",
+       "27299901   -28\n",
+       "27299902   -29\n",
+       "27299903   -30\n",
+       "27299904   -31\n",
+       "27299905   -32\n",
+       "27299906   -33\n",
+       "27299907   -34\n",
+       "27299908   -35\n",
+       "27299909   -36\n",
+       "27299910   -37\n",
+       "27299911   -38\n",
+       "27299912   -39\n",
+       "27299913   -40\n",
+       "27299914   -41\n",
+       "27299915   -42\n",
+       "27299916   -43\n",
+       "27299917   -44\n",
+       "27299918   -45\n",
+       "27299919   -46\n",
+       "27299920   -47\n",
+       "27299921   -48\n",
+       "27299922   -49\n",
+       "27299923   -50\n",
+       "27299924   -51\n",
+       "Name: MONTHS_BALANCE, Length: 27299925, dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bureau_balance.MONTHS_BALANCEONTHS_BALANCE.value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a name=\"pos_cash\"></a>\n",
+    "\n",
     "### POS_CASH_balance.csv\n",
     "\n",
     "(Open to see description of columns)\n",
@@ -249,11 +579,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of pcb: (10001358, 8)\n",
+      "\n",
+      "\u001b[4mColumns of pcb:\u001b[0m\n",
+      "SK_ID_PREV --- SK_ID_CURR --- MONTHS_BALANCE --- CNT_INSTALMENT --- CNT_INSTALMENT_FUTURE --- NAME_CONTRACT_STATUS --- SK_DPD --- SK_DPD_DEF\n"
+     ]
+    }
+   ],
+   "source": [
+    "pcb = pd.read_csv(DATA_PATH + \"POS_CASH_balance.csv\")\n",
+    "print(\"Shape of pcb:\",  pcb.shape)\n",
+    "\n",
+    "print(\"\\n{}Columns of pcb:{}\".format(color.UNDERLINE, color.END))\n",
+    "print(\" --- \".join(pcb.columns.values))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
    "source": [
+    "<a name=\"credit_card\"></a>\n",
+    "\n",
     "### credit_card_balance.csv\n",
     "\n",
     "(Open to see description of columns)\n",
@@ -291,11 +647,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of credit_card: (3840312, 23)\n",
+      "\n",
+      "\u001b[4mColumns of credit_card:\u001b[0m\n",
+      "SK_ID_PREV --- SK_ID_CURR --- MONTHS_BALANCE --- AMT_BALANCE --- AMT_CREDIT_LIMIT_ACTUAL --- AMT_DRAWINGS_ATM_CURRENT --- AMT_DRAWINGS_CURRENT --- AMT_DRAWINGS_OTHER_CURRENT --- AMT_DRAWINGS_POS_CURRENT --- AMT_INST_MIN_REGULARITY --- AMT_PAYMENT_CURRENT --- AMT_PAYMENT_TOTAL_CURRENT --- AMT_RECEIVABLE_PRINCIPAL --- AMT_RECIVABLE --- AMT_TOTAL_RECEIVABLE --- CNT_DRAWINGS_ATM_CURRENT --- CNT_DRAWINGS_CURRENT --- CNT_DRAWINGS_OTHER_CURRENT --- CNT_DRAWINGS_POS_CURRENT --- CNT_INSTALMENT_MATURE_CUM --- NAME_CONTRACT_STATUS --- SK_DPD --- SK_DPD_DEF\n"
+     ]
+    }
+   ],
+   "source": [
+    "credit_card = pd.read_csv(DATA_PATH + \"credit_card_balance.csv\")\n",
+    "print(\"Shape of credit_card:\",  credit_card.shape)\n",
+    "\n",
+    "print(\"\\n{}Columns of credit_card:{}\".format(color.UNDERLINE, color.END))\n",
+    "print(\" --- \".join(credit_card.columns.values))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
    "source": [
+    "<a name=\"prev_app\"></a>\n",
+    "\n",
     "### previous_application.csv\n",
     "\n",
     "(Open to see description of columns)\n",
@@ -347,9 +729,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of prev_app: (1670214, 37)\n",
+      "\n",
+      "\u001b[4mColumns of prev_app:\u001b[0m\n",
+      "SK_ID_PREV --- SK_ID_CURR --- NAME_CONTRACT_TYPE --- AMT_ANNUITY --- AMT_APPLICATION --- AMT_CREDIT --- AMT_DOWN_PAYMENT --- AMT_GOODS_PRICE --- WEEKDAY_APPR_PROCESS_START --- HOUR_APPR_PROCESS_START --- FLAG_LAST_APPL_PER_CONTRACT --- NFLAG_LAST_APPL_IN_DAY --- RATE_DOWN_PAYMENT --- RATE_INTEREST_PRIMARY --- RATE_INTEREST_PRIVILEGED --- NAME_CASH_LOAN_PURPOSE --- NAME_CONTRACT_STATUS --- DAYS_DECISION --- NAME_PAYMENT_TYPE --- CODE_REJECT_REASON --- NAME_TYPE_SUITE --- NAME_CLIENT_TYPE --- NAME_GOODS_CATEGORY --- NAME_PORTFOLIO --- NAME_PRODUCT_TYPE --- CHANNEL_TYPE --- SELLERPLACE_AREA --- NAME_SELLER_INDUSTRY --- CNT_PAYMENT --- NAME_YIELD_GROUP --- PRODUCT_COMBINATION --- DAYS_FIRST_DRAWING --- DAYS_FIRST_DUE --- DAYS_LAST_DUE_1ST_VERSION --- DAYS_LAST_DUE --- DAYS_TERMINATION --- NFLAG_INSURED_ON_APPROVAL\n"
+     ]
+    }
+   ],
+   "source": [
+    "prev_app = pd.read_csv(DATA_PATH + \"previous_application.csv\")\n",
+    "print(\"Shape of prev_app:\",  prev_app.shape)\n",
+    "\n",
+    "print(\"\\n{}Columns of prev_app:{}\".format(color.UNDERLINE, color.END))\n",
+    "print(\" --- \".join(prev_app.columns.values))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a name=\"install_payments\"></a>\n",
+    "\n",
     "### installments_payments.csv\n",
     "\n",
     "(Open to see description of columns)\n",
@@ -372,10 +780,36 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of install_pay: (13605401, 8)\n",
+      "\n",
+      "\u001b[4mColumns of install_pay:\u001b[0m\n",
+      "SK_ID_PREV --- SK_ID_CURR --- NUM_INSTALMENT_VERSION --- NUM_INSTALMENT_NUMBER --- DAYS_INSTALMENT --- DAYS_ENTRY_PAYMENT --- AMT_INSTALMENT --- AMT_PAYMENT\n"
+     ]
+    }
+   ],
+   "source": [
+    "install_pay = pd.read_csv(DATA_PATH + \"installments_payments.csv\")\n",
+    "print(\"Shape of install_pay:\",  install_pay.shape)\n",
+    "\n",
+    "print(\"\\n{}Columns of install_pay:{}\".format(color.UNDERLINE, color.END))\n",
+    "print(\" --- \".join(install_pay.columns.values))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
    "source": []
   }
  ],
