calling it a night

--- a/complete/titanic/submission.ipynb
+++ b/complete/titanic/submission.ipynb
@@ -6,9 +6,7 @@
    "source": [
     "# Score: \n",
     "\n",
-    "Huge thank you to [Minsuk Heo](https://github.com/minsuk-heo) ([his work](https://github.com/minsuk-heo/kaggle-titanic/blob/master/titanic-solution.ipynb)) and [Yassine Ghouzam](https://www.kaggle.com/yassineghouzam) ([his work](https://www.kaggle.com/yassineghouzam/titanic-top-4-with-ensemble-modeling))!\n",
-    "\n",
-    "A lot of this work was inspired by them\n",
+    "Huge thank you to [Minsuk Heo](https://github.com/minsuk-heo) ([his work](https://github.com/minsuk-heo/kaggle-titanic/blob/master/titanic-solution.ipynb)) and [Yassine Ghouzam](https://www.kaggle.com/yassineghouzam) ([his work](https://www.kaggle.com/yassineghouzam/titanic-top-4-with-ensemble-modeling)) for inspriing a lot of these ideas!\n",
     "\n",
     "### Imports"
    ]
@@ -373,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -468,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -482,8 +480,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=4)]: Done  42 tasks      | elapsed:    7.5s\n",
-      "[Parallel(n_jobs=4)]: Done 192 tasks      | elapsed:   29.1s\n",
+      "[Parallel(n_jobs=4)]: Done  42 tasks      | elapsed:    7.8s\n",
+      "[Parallel(n_jobs=4)]: Done 192 tasks      | elapsed:   30.4s\n",
       "[Parallel(n_jobs=4)]: Done 442 tasks      | elapsed:  1.3min\n",
       "[Parallel(n_jobs=4)]: Done 540 out of 540 | elapsed:  1.7min finished\n"
      ]
@@ -491,10 +489,10 @@
     {
      "data": {
       "text/plain": [
-       "0.83277216610549942"
+       "0.82940516273849607"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -546,19 +544,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=4)]: Done  42 tasks      | elapsed:    9.4s\n",
-      "[Parallel(n_jobs=4)]: Done 192 tasks      | elapsed:   40.9s\n",
-      "[Parallel(n_jobs=4)]: Done 442 tasks      | elapsed:  1.8min\n",
-      "[Parallel(n_jobs=4)]: Done 540 out of 540 | elapsed:  2.2min finished\n"
+      "[Parallel(n_jobs=1)]: Done 540 out of 540 | elapsed:  3.4min finished\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.82603815937149272"
+       "0.82828282828282829"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +571,7 @@
     "              \"criterion\": [\"gini\"]}\n",
     "\n",
     "\n",
-    "gsRFC = GridSearchCV(RFC,param_grid = rf_param_grid, cv=kfold, scoring=\"accuracy\", n_jobs= 4, verbose = 1)\n",
+    "gsRFC = GridSearchCV(RFC,param_grid = rf_param_grid, cv=kfold, scoring=\"accuracy\", verbose=1)\n",
     "\n",
     "gsRFC.fit(train_x, train_y)\n",
     "\n",
@@ -595,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -609,18 +604,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=4)]: Done  76 tasks      | elapsed:    4.5s\n",
-      "[Parallel(n_jobs=4)]: Done 376 tasks      | elapsed:   24.2s\n",
-      "[Parallel(n_jobs=4)]: Done 720 out of 720 | elapsed:   50.2s finished\n"
+      "[Parallel(n_jobs=1)]: Done 720 out of 720 | elapsed:  1.2min finished\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.83052749719416386"
+       "0.82491582491582494"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,7 +628,7 @@
     "              'max_features': [0.3, 0.1] \n",
     "              }\n",
     "\n",
-    "gsGBC = GridSearchCV(GBC,param_grid = gb_param_grid, cv=kfold, scoring=\"accuracy\", n_jobs= 4, verbose = 1)\n",
+    "gsGBC = GridSearchCV(GBC,param_grid=gb_param_grid, cv=kfold, scoring=\"accuracy\", verbose=1)\n",
     "\n",
     "gsGBC.fit(train_x, train_y)\n",
     "\n",
@@ -654,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -668,18 +661,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=4)]: Done  42 tasks      | elapsed:    2.0s\n",
-      "[Parallel(n_jobs=4)]: Done 192 tasks      | elapsed:   13.9s\n",
-      "[Parallel(n_jobs=4)]: Done 280 out of 280 | elapsed:   28.7s finished\n"
+      "[Parallel(n_jobs=1)]: Done 280 out of 280 | elapsed:   52.6s finished\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.83164983164983164"
+       "0.83052749719416386"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +681,7 @@
     "                  'gamma': [ 0.001, 0.01, 0.1, 1],\n",
     "                  'C': [1, 10, 50, 100,200,300, 1000]}\n",
     "\n",
-    "gsSVMC = GridSearchCV(SVMC,param_grid = svc_param_grid, cv=kfold, scoring=\"accuracy\", n_jobs= 4, verbose = 1)\n",
+    "gsSVMC = GridSearchCV(SVMC, param_grid=svc_param_grid, cv=kfold, scoring=\"accuracy\", verbose=1)\n",
     "\n",
     "gsSVMC.fit(train_x, train_y)\n",
     "\n",
@@ -709,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
