updated ghouls project

--- a/in_progress/home_default/4_stacking.ipynb
+++ b/in_progress/home_default/4_stacking.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -131,38 +131,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def _get_categorical_features(df):\n",
-    "    return [col for col in df.columns if df[col].dtype == 'object']\n",
-    "\n",
-    "# get categorical features\n",
-    "data_cats = _get_categorical_features(full)\n",
-    "prev_app_cats = _get_categorical_features(previous_application)\n",
-    "bureau_cats = _get_categorical_features(bureau)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# function to create dummy variables of categorical features\n",
-    "def _get_dummies(df, cats):\n",
-    "    for col in cats:\n",
-    "        df = pd.concat([df, pd.get_dummies(df[col], prefix=col)], axis=1)\n",
-    "    return df \n",
+    "def cat_feats(df):\n",
+    "    return [col for col in df.columns if df[col].dtype == 'object']\n",
     "\n",
-    "# create additional dummy features \n",
-    "previous_application = _get_dummies(previous_application, prev_app_cats)\n",
-    "bureau = _get_dummies(bureau, bureau_cats)"
+    "# get categorical features\n",
+    "data_cats = cat_feats(full)\n",
+    "prev_app_cats = cat_feats(previous_application)\n",
+    "bureau_cats = cat_feats(bureau)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Turn categorical features to dummy columns"
    ]
   },
   {
@@ -173,14 +161,24 @@
    },
    "outputs": [],
    "source": [
+    "previous_application = pd.get_dummies(previous_application)\n",
+    "bureau = pd.get_dummies(bureau)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# function to factorize categorical features\n",
-    "def _factorize_categoricals(df, cats):\n",
+    "def factorize_df(df, cats):\n",
     "    for col in cats:\n",
     "        df[col], _ = pd.factorize(df[col])\n",
     "    return df \n",
     "\n",
     "# factorize the categorical features from train and test data\n",
-    "full = _factorize_categoricals(full, data_cats)"
+    "full = factorize_df(full, data_cats)"
    ]
   },
   {
